chore(styles): Fix various spacing issues

--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -11,7 +11,6 @@ body {
   font-family: "Open Sans";
   line-height: 1.7em;
 
-  background: #eff2f4;
   color: #7b7e85;
 
   margin: 0;
@@ -260,6 +259,8 @@ header {
   }
 
   > .seperator {
+    margin-bottom: 30px;
+    padding-bottom: 30px;
     border-bottom: 1px solid #eff2f4;
 
     &:last-child {
